<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sirius_signal_lights_driver</name>
    <version>0.0.0</version>
    <description>Sent can_msgs about lamps</description>
    <maintainer email="klaudianiedzi@gmail.com">klaudia</maintainer>
    <license>Apache-2.0</license>
    
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <build_depend>rclpy</build_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>can_msgs</exec_depend>
    <exec_depend>lamps_nodes_py</exec_depend>


    <export>
        <build_type>ament_python</build_type>
    </export>

</package>